test/datalog_tests/function.fail.ast.expected
error: ./test/datalog_tests/function.fail.dl:3:5-3:10: Variable declaration is not allowed in this context
    var x: bigint
    ^^^^^

error: ./test/datalog_tests/function.fail.dl:13:13-14:1: Missing field 'f2' in constructor C
    var z = C{.f1 = "foo"}
            ^

error: ./test/datalog_tests/function.fail.dl:11:17-11:24: Type mismatch:
expected type: bit<32>
actual type: bool
in
expression '(var w: bool)'
        C0{.x = w: bool} -> w,
                ^^^^^^^

error: ./test/datalog_tests/function.fail.dl:6:13-7:1: Access to guarded field 'x' (not all constructors of type 'ddlog_std::Option' have this field).
    var b = a.x
            ^

error: ./test/datalog_tests/function.fail.dl:6:5-6:17: Type constructor in the left-hand side of an assignment is only allowed for types with one constructor,  but "ddlog_std::Option" has multiple constructors
    Some{var s} = x
    ^^^^^^^^^^^^

error: ./test/datalog_tests/function.fail.dl:8:16-8:27: Type constructor in the left-hand side of an assignment is only allowed for types with one constructor,  but "ddlog_std::Option" has multiple constructors
    T{.field = Some{var s}} = x
               ^^^^^^^^^^^

Failed to parse input file: "./test/datalog_tests/function.fail.dl" (line 5, column 1):
unexpected "f"
expecting "=" or "{"

error: ./test/datalog_tests/function.fail.dl:4:5-4:6: expression 'x' must have a field named 'bar', but its type 'bigint' doesn't
    x.bar // x is not a struct
    ^

error: ./test/datalog_tests/function.fail.dl:3:41-5:1: Conversion between signed and unsigned bit vectors only supported across types of the same bit width. Try casting to signed<32> first.
function cast(x: bit<32>): signed<64> = x as signed<64>
                                        ^

error: ./test/datalog_tests/function.fail.dl:3:41-5:1: Conversion between signed and unsigned bit vectors only supported across types of the same bit width. Try casting to bit<32> first.
function cast(x: signed<32>): bit<64> = x as bit<64>
                                        ^

error: ./test/datalog_tests/function.fail.dl:3:37-5:1: Direct casts from bigint to bit<> are not supported; consider going through signed<>("./test/datalog_tests/function.fail.dl" (line 3, column 37),"./test/datalog_tests/function.fail.dl" (line 3, column 39))
function cast(x: bigint): bit<64> = x as bit<64>
                                    ^

error: ./test/datalog_tests/function.fail.dl:3:35-5:1: Cannot type-cast expression to bool.  Only numeric types can be cast to.
function cast(x: bit<16>): bool = x as bool
                                  ^

Failed to parse input file: "./test/datalog_tests/function.fail.dl" (line 3, column 30):
unexpected "3"
expecting "bit", "signed", "bigint", "double", "float", "string", "bool", "#", constructor name, type name, "'", "(" or ">"

error: ./test/datalog_tests/function.fail.dl:3:37-5:1: There are no direct casts from floating point to integers; use the library functions int_from_*.double
function cast(x: double): bit<32> = x as bit<32>
                                    ^

error: ./test/datalog_tests/function.fail.dl:3:34-5:1: Cannot type-cast expression of type string.  The type-cast operator is only supported for numeric types.
function cast(x: string): bool = x as bool
                                 ^

error: ./test/datalog_tests/function.fail.dl:6:5-7:1: "continue" outside of a loop
    continue
    ^

error: ./test/datalog_tests/function.fail.dl:8:9-8:18: Expression is not an l-value
        continue = true
        ^^^^^^^^^

error: ./test/datalog_tests/function.fail.dl:6:12-7:1: Type mismatch:
expected type: ()
actual type: bool
in
expression 'false'
    return false
           ^

Failed to parse input file: "./test/datalog_tests/function.fail.dl" (line 9, column 1):
unexpected end of input
expecting "," or "."

error: ./test/datalog_tests/function.fail.dl:7:5-8:1: Upper bound of the slice exceeds argument width
    x[31:0]
    ^

error: ./test/datalog_tests/function.fail.dl:6:5-6:9: Expression is not an l-value
    x.0 = "bar";
    ^^^^

error: ./test/datalog_tests/function.fail.dl:7:5-7:9: Expression is not an l-value
    x.0 = "foo";
    ^^^^

error: ./test/datalog_tests/function.fail.dl:10:16-10:34: Type mismatch:
expected type: bool
actual type: ddlog_std::Option<bool>
in
expression 'bool_identity(any)'
  (Tagg{.col = bool_identity(any)})
               ^^^^^^^^^^^^^^^^^^

error: ./test/datalog_tests/function.fail.dl:5:1-6:1: Extern function 'foo' clashes with function declaration(s) at
  ./test/datalog_tests/function.fail.dl:6:1-8:1
Only non-extern functions can be overloaded.
extern function foo(x: u32): ()
^

error: ./test/datalog_tests/function.fail.dl:8:21-8:38: expression 'ddlog_std::nth(components, 1)' must be of type 'Result<>', but its type is 'ddlog_std::Option<'a>'
    var last_name = components.nth(1)?;
                    ^^^^^^^^^^^^^^^^^

error: ./test/datalog_tests/function.fail.dl:13:5-13:7: Expression is not an l-value
    y = 0
    ^^

error: ./test/datalog_tests/function.fail.dl:7:9-7:13: Expression is not an l-value
        val = y
        ^^^^

error: ./test/datalog_tests/function.fail.dl:15:5-15:17: Expression is not an l-value
    interned.f1 = "bar"
    ^^^^^^^^^^^^

error: ./test/datalog_tests/function.fail.dl:13:9-13:12: Expression is not an l-value
        vec.push(val)
        ^^^

error: ./test/datalog_tests/function.fail.dl:13:10-13:13: Expression is not an l-value
    if ({vec.push(3); vec.len()} > 5) { () }
         ^^^
